# libbcfmt

./: .gitignore  .gitmodules  README.md  dub.sdl  dub.selections.json  meson.build
source/: test.d
source/libbc/fmt/: conv.d  fmt.d  package.d
